#58. Fixed the issue of Cortex expanding beyond the window and collapsing back to the right spot on new messages. All steps on the training are now styled consistently.

--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -8,6 +8,13 @@
     color: #7FB0DA !important;
 }
 
+.cortext-input {
+    position: absolute;
+    bottom: 45px;
+    left: 20px;
+    width: 280px;
+}
+
 /*
  Thanks to http://codepen.io/samuelkraft/pen/Farhl
 */
